--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,10 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
+  ffi: ^1.1.2
 
 dev_dependencies:
+  pedantic: ^1.11.0
   flutter_test:
     sdk: flutter
   ffigen: ^3.0.0
