Update cbindgen.toml to follow Dart naming convention

--- a/ffigen_config.yaml
+++ b/ffigen_config.yaml
@@ -1,4 +1,4 @@
-output: lib/bindings.dart
+output: lib/src/bindings.dart
 headers:
   entry-points:
     - native/dr_libphonenumber/target/bindings.h
