--- a/native/dr_libphonenumber/cbindgen.toml
+++ b/native/dr_libphonenumber/cbindgen.toml
@@ -6,3 +6,6 @@ autogen_warning = "// NOTE: Append the lines below to ios/Classes/DrLibphonenumb
 [defines]
 "target_os = ios" = "TARGET_OS_IOS"
 "target_os = macos" = "TARGET_OS_MACOS"
+
+[fn]
+rename_args = "CamelCase"
