--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -28,6 +28,8 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 android {
     compileSdkVersion 30
 
+    ndkVersion "23.0.7599858"
+
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
