--- a/.github/workflows/publish-binaries.yml
+++ b/.github/workflows/publish-binaries.yml
@@ -15,13 +15,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Change working directory to dr_libphonenumber
-        run: cd native/dr_libphonenumber
-        
+      
       - name: Make binaries
         run: |
-          ls
-          make -v
+          cd native/dr_libphonenumber
           make all
       
       - name: Create a release
