--- a/.github/workflows/publish-binaries.yml
+++ b/.github/workflows/publish-binaries.yml
@@ -27,7 +27,7 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           working-directory: native/dr_libphonenumber
-          artifacts: "target/**"
+          artifacts: "target/*"
           token: ${{ secrets.GITHUB_TOKEN }}
           
       - name: Cleanup
