--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   ffi: ^1.1.2
+  equatable: ^2.0.3
 
 dev_dependencies:
   pedantic: ^1.11.0
