--- a/dr_libphonenumber/pubspec.yaml
+++ b/dr_libphonenumber/pubspec.yaml
@@ -17,13 +17,13 @@ dependencies:
     git:
       url: https://github.com/TabooSun/dr_libphonenumber.git
       ref: v0.0.1
-      path: libphonenumber_platform_interface
+      path: dr_libphonenumber_platform_interface
 
   dr_libphonenumber_web:
     git:
       url: https://github.com/TabooSun/dr_libphonenumber.git
       ref: v0.0.1
-      path: libphonenumber_web
+      path: dr_libphonenumber_web
 
 dependency_overrides:
   dr_libphonenumber_platform_interface:
