--- a/dr_libphonenumber/pubspec.yaml
+++ b/dr_libphonenumber/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 version: 0.0.1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
   flutter: ">=1.20.0"
 
 dependencies:
@@ -11,8 +11,9 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  ffi: ^1.1.2
+  ffi: ^2.0.1
   equatable: ^2.0.3
+  quiver: ^3.1.0
   dr_libphonenumber_platform_interface:
     git:
       url: https://github.com/TabooSun/dr_libphonenumber.git
@@ -32,10 +33,13 @@ dependency_overrides:
     path: ../dr_libphonenumber_web
 
 dev_dependencies:
-  pedantic: ^1.11.0
+  taboosun_lints:
+    git:
+      url: https://github.com/TabooSun/dart_taboosun_lints.git
+      ref: v1.1.3
   flutter_test:
     sdk: flutter
-  ffigen: ^3.0.0
+  ffigen: ^6.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
