--- a/dr_libphonenumber_web/pubspec.yaml
+++ b/dr_libphonenumber_web/pubspec.yaml
@@ -4,8 +4,8 @@ version: 1.0.0
 # homepage: https://www.example.com
 
 environment:
-  sdk: '>=2.14.0 <3.0.0'
-  flutter: ">=1.17.0"
+  sdk: '>=2.17.0 <3.0.0'
+  flutter: ">=3.0.0"
 
 dependencies:
   flutter:
@@ -26,7 +26,10 @@ dependency_overrides:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  lints: ^1.0.0
+  taboosun_lints:
+    git:
+      url: https://github.com/TabooSun/dart_taboosun_lints.git
+      ref: v1.1.3
 
 flutter:
   plugin:
