Fix macOS not working

--- a/dr_libphonenumber/example/macos/Runner/Configs/AppInfo.xcconfig
+++ b/dr_libphonenumber/example/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = dr_libphonenumber_example
+PRODUCT_NAME = example
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.techcreator.drlibphonenumber.drLibphonenumberExample
+PRODUCT_BUNDLE_IDENTIFIER = com.techcreator.drlibphonenumber.example
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2021 com.tech_creator.dr_libphonenumber. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2022 com.techcreator.drlibphonenumber. All rights reserved.
