Upgrade Android Gradle

--- a/dr_libphonenumber/android/src/main/AndroidManifest.xml
+++ b/dr_libphonenumber/android/src/main/AndroidManifest.xml
@@ -1,3 +1,2 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.tech_creator.dr_libphonenumber.dr_libphonenumber">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 </manifest>
