--- a/dr_libphonenumber/example/android/app/build.gradle
+++ b/dr_libphonenumber/example/android/app/build.gradle
@@ -26,6 +26,7 @@ apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
+    namespace "com.tech_creator.dr_libphonenumber.dr_libphonenumber_example"
     compileSdkVersion 33
 
     sourceSets {
