--- a/dr_libphonenumber/example/android/app/src/profile/AndroidManifest.xml
+++ b/dr_libphonenumber/example/android/app/src/profile/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tech_creator.dr_libphonenumber.dr_libphonenumber_example">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Flutter needs it to communicate with the running application
          to allow setting breakpoints, to provide hot reload, etc.
     -->
