--- a/packages/dr_libphonenumber_web/pubspec.yaml
+++ b/packages/dr_libphonenumber_web/pubspec.yaml
@@ -3,6 +3,8 @@ description: A new Flutter project.
 version: 0.0.1
 homepage:
 
+publish_to: none
+
 environment:
   sdk: '>=3.0.5 <4.0.0'
   flutter: ">=3.3.0"
