--- a/packages/flutter_dr_libphonenumber/pubspec.yaml
+++ b/packages/flutter_dr_libphonenumber/pubspec.yaml
@@ -3,6 +3,8 @@ description: A new Flutter FFI plugin project.
 version: 0.0.1
 homepage:
 
+publish_to: none
+
 environment:
   sdk: '>=3.0.6 <4.0.0'
   flutter: ">=3.3.0"
@@ -12,11 +14,15 @@ dependencies:
     sdk: flutter
   plugin_platform_interface: ^2.0.2
   dr_libphonenumber:
-    path:
-      ../dr_libphonenumber
+    git:
+      url: https://github.com/TabooSun/dr_libphonenumber.git
+      ref: v0.0.1-frb-dr_libphonenumber
+      path: packages/dr_libphonenumber
   dr_libphonenumber_web:
-    path:
-      ../dr_libphonenumber_web
+    git:
+      url: https://github.com/TabooSun/dr_libphonenumber.git
+      ref: v0.0.1-frb-dr_libphonenumber_web
+      path: packages/dr_libphonenumber_web
 
 dev_dependencies:
   ffi: ^2.0.1
@@ -24,6 +30,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  taboosun_lints:
+    git:
+      url: https://github.com/TabooSun/dart_taboosun_lints.git
+      ref: v1.1.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
