--- a/dr_libphonenumber/android/build.gradle
+++ b/dr_libphonenumber/android/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.5.30'
+    ext.kotlin_version = "1.8.0"
     repositories {
         google()
         mavenCentral()
@@ -26,7 +26,17 @@ apply plugin: 'kotlin-android'
 
 android {
     namespace "com.tech_creator.dr_libphonenumber.dr_libphonenumber"
-    compileSdkVersion 30
+    compileSdk 34
+    ndkVersion "26.3.11579264"
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -37,5 +47,5 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
